# PharmacoBench

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.loki/: CONTINUITY.md
.loki/metrics/: dashboard.json
.loki/queue/: completed.json  pending.json
.loki/state/: orchestrator.json
.streamlit/: config.toml
api/: __init__.py  main.py  schemas.py
api/routes/: __init__.py  benchmarks.py  models.py  predictions.py
app/: __init__.py  main.py
app/components/: __init__.py  error_boundary.py  filter_panel.py  loading_skeleton.py  metric_card.py
app/pages/: 1_Dashboard.py  2_Data_Explorer.py  3_Model_Training.py  4_Benchmark_Results.py  5_Drug_Analysis.py  6_Cell_Line_Analysis.py  7_Custom_Data.py  8_Predict.py
app/styles/: aurora.css
app/utils/: __init__.py  data_loader.py  page_utils.py
data/: __init__.py  downloader.py  feature_engineer.py  preprocessor.py  splitters.py
docs/: API.md  PROBLEM.md  PRODUCT.md  PROJECT_SUMMARY.md  SOLUTION.md  STACK.md  USER_GUIDE.md  WORKFLOW.md
evaluation/: __init__.py  benchmark_runner.py  metrics.py
models/: __init__.py  base_model.py
models/deep_learning/: __init__.py  deepcdr.py  graphdrp.py  mlp.py
models/traditional/: __init__.py  elasticnet.py  lightgbm_model.py  random_forest.py  ridge.py  xgboost_model.py
tests/: __init__.py  conftest.py
tests/test_data/: test_preprocessor.py  test_splitters.py
tests/test_evaluation/: test_benchmark_runner.py  test_metrics.py
tests/test_models/: __init__.py  test_deep_learning.py  test_traditional.py
